...
        )
    }
    
    func groups() -> [Components.Group] {
        SingleGroupProvider(
            cellDataSources: [
                presentableCard("Default") { _ in },
                presentableCard("Button") { $0.configuration = .button },
                presentableCard("Not elevated") { $0.isElevated = false },
                presentableCard("Link") { $0.configuration = .link },
                presentableCard("Without padding") { $0.padded = false },
                presentableCard("Selected") { $0.selected = true },
                presentableCard("Corner style large") { $0.cornerStyle = .large },
                presentableCard("Background color") { $0.backgroundColor = BPKColor.statusWarningFillColor },
                presentableDevidedCard("With divider") { $0.divisionDirection = .horizontal },
                presentableDevidedCard("With divider and corner style large") { cardVC in
                    cardVC.divisionDirection = .horizontal
                    cardVC.cornerStyle = .large
                },
                presentableDevidedCard("With divider arranged vertically") { $0.divisionDirection = .vertical },
                presentableDevidedCard("With divider without padding") { cardVC in
                    cardVC.divisionDirection = .vertical
                    cardVC.padded = false
                },
                presentableDevidedCard("With solid divider with padding") { cardVC in
                    cardVC.divisionDirection = .vertical
                    cardVC.padded = true
...
