...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="With call to action" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="uII-2N-yFi" customClass="BPKLabel">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Warning" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4XI-Mr-ojS" customClass="BPKLabel">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="With no title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lPk-wn-NqP" customClass="BPKLabel">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                </cells>
                            </tableViewSection>
                            <tableViewSection headerTitle="Bottom Sheet" id="ZI2-mh-p2K">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="nPr-2T-FB2" style="IBUITableViewCellStyleDefault" id="sbF-Zj-rQ9">
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Delete confirmation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nPr-2T-FB2" customClass="BPKLabel">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Success" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="kav-UG-4Dg" customClass="BPKLabel">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="With no icon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="r1C-m6-DYh" customClass="BPKLabel">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="With no icon and no title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="JGh-4f-Ykq" customClass="BPKLabel">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AIN-1w-r3E" customClass="BPKButton">
                                <rect key="frame" x="168.5" y="308.5" width="38" height="30"/>
                                <state key="normal" title="Show"/>
                                <connections>
                                    <action selector="show:" destination="32d-aD-b4K" eventType="touchUpInside" id="txr-eJ-PvO"/>
...
